# place-items-on-shelf

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  isaac-sim-aws-setup.md  task-list.md
docs/: 01-understanding-the-problem.md  02-choosing-arm-and-gripper.md  03-sensors.md  README.md  latest-robots.md  learning-checklist.md
docs/01-finalize-requirements/: 01-understanding-the-problem.md  02-additional-requirements-to-consider.md  README.md  additional-requirements-to-consider.md  understanding-the-problem.md
docs/02-hardware-selection/: 01-arm.md  02-gripper.md  03-arm-gripper-bundles.md  04-mounting-and-mechanical-structure.md  05-actuation-and-power-systems.md  06-control-hardware.md  07-communication-and-networking.md  08-cable-management.md  09-safety-equipment.md  10-operator-interface.md  12-latest-robots.md  README.md  actuation-and-power-systems.md  arm.md  cable-management.md  communication-and-networking.md  control-hardware.md  gripper.md  latest-robots.md  mounting-and-mechanical-structure.md  operator-interface.md  safety-equipment.md  sensors.md
docs/03-software-stack/: 02-robotics-middleware.md  03-vendor-sdks-and-drivers.md  05-perception-software.md  06-a-open-vocab-perception.md  06-ai-and-foundation-models.md  06-b-neural-grasp-generation.md  06-c-imitation-learning.md  06-d-reinforcement-learning.md  06-e-vision-language-action.md  06-f-llms-in-the-loop.md  06-g-datasets-and-pretraining.md  06-h-where-models-run.md  10-build-deploy-and-maintenance.md  README.md
docs/04-integration-and-bring-up/: 01-a-choose-and-install-simulator.md  01-b-build-the-virtual-cell.md  01-c-bring-up-moveit-in-sim.md  01-d-scripted-first-task.md  01-e-fake-perception-in-sim.md  01-f-stress-test-in-sim.md  02-a-shared-urdf-and-frames.md  02-b-ros2-control-driver-swap.md  02-c-hand-eye-and-base-calibration.md  02-d-shadow-mode-and-slow-speeds.md  02-e-phased-rollout.md  03-system-integration-on-real.md  04-a-pick-teleop-hardware.md  04-b-install-and-calibrate-leader-follower.md  04-c-record-demos.md  04-d-curate-and-clean-dataset.md  04-e-pick-and-fine-tune-policy.md  04-f-evaluate-and-iterate.md  05-bring-up-checklist.md  06-pilot-deployment.md  07-acceptance-tests.md  08-safety-validation.md  10-monitoring-and-incident-response.md  README.md
docs/hplc-autosamplers/: 01-what-needs-to-be-done.md  02-what-is-hplc-and-an-autosampler.md  03-manual-steps-today.md  04-why-automate-tray-loading.md  05-existing-solutions.md  README.md  perception-design-decisions.md
docs/mujoco/: 01-what-is-mujoco.md  README.md
docs/synthetic-data/: README.md  how-we-generate-it.md  industry-methods.md
exercises/: README.md  learning-checklist.md
exercises/04-yolo-live-on-gazebo-camera/yolo_live_demo/: package.xml  setup.cfg  setup.py
exercises/04-yolo-live-on-gazebo-camera/yolo_live_demo/config/: yolo_live.rviz
exercises/04-yolo-live-on-gazebo-camera/yolo_live_demo/launch/: yolo_live.launch.py
exercises/04-yolo-live-on-gazebo-camera/yolo_live_demo/yolo_live_demo/: live_detector_node.py
exercises/18-joint-space-hello-moveit/park_pose_demo/: CMakeLists.txt  package.xml
exercises/18-joint-space-hello-moveit/park_pose_demo/launch/: park_pose_demo.launch.py
exercises/18-joint-space-hello-moveit/park_pose_demo/src/: park_pose_demo.cpp
exercises/19-cartesian-pose-goal/cartesian_pose_demo/: CMakeLists.txt  package.xml
exercises/19-cartesian-pose-goal/cartesian_pose_demo/launch/: cartesian_pose_demo.launch.py
exercises/19-cartesian-pose-goal/cartesian_pose_demo/src/: cartesian_pose_demo.cpp
exercises/20-collision-objects/collision_demo/: CMakeLists.txt  package.xml
exercises/20-collision-objects/collision_demo/launch/: collision_demo.launch.py
exercises/20-collision-objects/collision_demo/src/: collision_demo.cpp
exercises/21-hardcoded-pick-and-place/pick_and_place_demo/: CMakeLists.txt  package.xml
exercises/21-hardcoded-pick-and-place/pick_and_place_demo/launch/: pick_and_place_demo.launch.py
exercises/21-hardcoded-pick-and-place/pick_and_place_demo/src/: pick_and_place_demo.cpp
exercises/22-cartesian-path-following/cartesian_path_demo/: CMakeLists.txt  package.xml
exercises/22-cartesian-path-following/cartesian_path_demo/launch/: cartesian_path_demo.launch.py
exercises/22-cartesian-path-following/cartesian_path_demo/src/: cartesian_path_demo.cpp
gazebo_worlds/: CAD-FORMATS.md
marketing-flyer/: 01-who-we-are.md  02-simulation-setup.md  03-synthetic-data.md  04-contact-us.md  README.md  design-system.md
outreach/: README.md  email-templates.md  find-outreach-companies-task.md  robotics-companies-agriculture-construction-energy.csv  robotics-companies-drones-maritime-inspection-defense.csv  robotics-companies-medical-surgical-lab.csv  robotics-companies-mixed-sectors.csv  robotics-companies-service-delivery-consumer-recycling.csv  robotics-companies-us-small-irrelevant.csv  robotics-companies-us-small-relevant.csv  robotics-companies-us-small.csv  robotics-companies-warehouse-logistics.csv  write-personalized-emails-task.md
robots/mycobot-280-pi/cobot280_moveit_task/: CMakeLists.txt  README.md  package.xml
robots/mycobot-280-pi/cobot280_moveit_task/launch/: move_to_named_pose.launch.py
robots/mycobot-280-pi/cobot280_moveit_task/src/: move_to_named_pose.cpp
tasks/: README.md  hplc-autosampler.md
v1_simple_pick/: README.md
v2/: README.md
v2/pos_v2_bringup/: CMakeLists.txt  package.xml
v2/pos_v2_bringup/launch/: backroom.launch.py
v2/pos_v2_bringup/worlds/: backroom.sdf
v2/pos_v2_description/: CMakeLists.txt  package.xml
v2/pos_v2_description/config/: bridge.yaml
v2/pos_v2_description/launch/: spawn_robot.launch.py
v2/pos_v2_description/urdf/: robot.urdf.xacro
v2/pos_v2_navigation/: CMakeLists.txt  package.xml
v2/pos_v2_navigation/config/: slam.rviz  slam_toolbox_async.yaml
v2/pos_v2_navigation/launch/: slam.launch.py
v2/pos_v2_navigation/maps/: README.md
v3_mycobot_pi/: README.md
v3_mycobot_pi/pos_v3_description/: CMakeLists.txt  package.xml
v3_mycobot_pi/pos_v3_description/urdf/: mycobot_280pi.urdf
(+306 files in other folders)
