<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pos_v2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and Gazebo world for the place-items-on-shelf v2 backroom map.</description>
  <maintainer email="dev@example.com">place-items-on-shelf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
